examples/test/testpolicy5084.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5084
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key20: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value49
          key10: value13
      podSelector:
        matchLabels:
          key27: value45
          key6: value15
